--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 </head>
 
 <body>
-    <header class="header">
+    <!-- Header -->
+    <!-- <header class="header">
         <div class="container header-container">
             <nav class="header-nav">
                 <a class="logo link" href=" ./index.html">Web<span class="logo-studio-header">Studio</span></a>
@@ -39,17 +40,21 @@
             </address>
         </div>
     </header>
-    </header>
+    </header> -->
 
+    <!-- Main -->
     <main class="main">
+        
+    <!-- Hero -->
         <section class="section hero">
             <div class="container">
-                <h1 class="caption">Effective Solutions for Your Business</h1>
+                <h1 class="caption">Effective Solutions For Your Business</h1>
                 <button type="button" class="hero-btn btn" data-modal-open> Order Service</button>
             </div>
         </section>
 
-        <section class="section">
+    <!-- Section 2-->
+         <section class="section">
             <div class="container">
                 <h2 class="visually-hidden">text</h2>
                 <ul class="section-two-list list">
@@ -108,18 +113,22 @@
                 </ul>
             </div>
         </section>
+
+    <!-- Section 3-->
         <section class="section about">
             <div class="container ">
                 <h2 class="section-title">What are we doing</h2>
-                <ul class="section-three-list list">
-                    <li class="section-two-item"> <img src=" ./images/img1.jpg" alt="iPad" width="360">
+                <ul class="section-about-list list">
+                    <li class="section-about-item"> <img src=" ./images/img1.jpg" alt="iPad" width="360">
                     </li>
-                    <li class="section-two-item"><img src="./images/img2.jpg" alt="iPhone" width="360"> </li>
-                    <li class="section-two-item"><img src="./images/img3.jpg" alt="Mac" width="360"> </li>
+                    <li class="section-about-item"><img src="./images/img2.jpg" alt="iPhone" width="360"> </li>
+                    <li class="section-about-item"><img src="./images/img3.jpg" alt="Mac" width="360"> </li>
                 </ul>
             </div>
         </section>
-        <section class="section team">
+
+    <!-- Section Team-->
+        <section class="team section" >
             <div class="container">
                 <h2 class="team-title section-title">Our Team</h2>
                 <ul class="team-list list">
@@ -274,6 +283,8 @@
                 </ul>
             </div>
         </section>
+
+    <!-- Section Customers-->
         <section class="section customers">
         <div class="container">
             <h2 class="section-title">Customers</h2>
