--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 
     <!-- Section Team-->
         <section class="team section" >
-            <div class="container">
+            <div class="container team-container">
                 <h2 class="team-title section-title">Our Team</h2>
                 <ul class="team-list list">
                     <li class="team-list-item">
@@ -365,7 +365,7 @@
 
     <!-- Section Customers-->
         <section class="section customers">
-        <div class="container">
+        <div class="container customers-container">
             <h2 class="section-title">Customers</h2>
             <ul class="customers-list list">
                 <li class="customers-list-item">
